<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tank_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:context="com.liand.cars.ui.view.TankInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/fuel_type"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/fuel_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/tank_volume"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tank_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:layout_column="1"
                android:paddingEnd="16dp"
                android:text="@string/consumption" />

            <TextView android:text="@string/emission" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:layout_column="1"
                android:paddingEnd="16dp"
                android:text="@string/consumption_unit" />

            <TextView android:text="@string/emission_unit" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:paddingEnd="16dp"
                android:text="@string/mixed" />

            <TextView
                android:id="@+id/mixed_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mixed_emission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView android:text="@string/rural" />

            <TextView
                android:id="@+id/rural_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rural_emission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView android:text="@string/urban" />

            <TextView
                android:id="@+id/urban_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/urban_emission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/not_applicable"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>