<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:context="com.liand.cars.ui.view.CarInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/reg_number"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reg_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/vin_number"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/vin_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/brand"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/year"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/gearbox"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gearbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="12dp"
        android:text="@string/last_updated"
        android:textColor="#6D6D6D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/last_edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/not_applicable"
        android:textColor="#000000"
        android:textSize="16sp" />

</LinearLayout>
